--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ php:
   - '7.0'
   - '7.1'
   - hhvm
+before_script:
+  - travis_retry composer install --no-interaction --prefer-source
 script:
   - vendor/bin/phpunit
